[metadata]
# replace with your username:
name = SDAQ
version = 0.0.3
author = Kilian Holzapfel
author_email = kilian.holzapfel@tum.de
description = A DAQ system based on hdf5 files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kholzapfel/sdaq

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src